Improve maximum sent keys to ZENG/ZENG Online
Allow to save ZX80/81 screen to .scr file
Added conversion of ZX81 files P to P81, and P81 to P
Allow to save text note on a ZSF snapshot
Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
Improved Mac timing by using native timer

Improved Sinclair QL emulation:
- Allow to increase Sinclair QL RAM size
- Allow to load and save QL screen files
- Added QL Screen file previews on File Selector

Improved ZX Vision:
- Allow to hide minimized windows
- Show, with a dot, when an icon is an open window but minimized
- Keep ZEsarUX window size proportions (disallow different zoom x/y) by default

Improved Debug CPU:
- Show view number inside the window and not in the window title
- Add option to enable/disable all breakpoints

Fixed semaphore locking on Windows

----


ZEsarUX 12 - Bubble Bobble edition. 16 January 2025

* New things added:

Added ZX Microdrive emulation on ZX Spectrum: that includes:
- Standard MDR emulation. Allow to browse inside MDR files, see file map, fragmentation, rename files, sectors info, chkdsk and emulate bad sectors
- Raw microdrive emulation. Supporting other non-interface1 rom file formats, like extending microdrive space with Multiface 128 or CP/M for LEC memory. Allow to see microdrive raw map (gap zones, sync bytes, data) and have "real problems", like autogenerate bad sectors or stretching the microdrive when it's new.
- Simulate data sound on read and write
- Visual Microdrive: Allow to see a microdrive cartridge in action

Added Visual Cassette Tape window
Added LEC memory extension emulation
Added machines Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
Added Memory Cheat feature: useful to find counters of energy, bombs, ammo or any other cheat in a game
Added Find text string on memory menu
Added Quicksave screen function
Added setting to disable persistent writes on Z88 Cards