@@ -98,5 +98,7 @@ donde se queda la tarjeta al desconectarse
 -Watermark que cambia al cargar
 *ok para real tape
 *ok con cinta estandar hacer tambien que se mueva, si se ha cargado algo en los ultimos segundos, mover barras
-*opcion que se pueda quitar esa rotacion
-*entrada en changelog
+*ok opcion que se pueda quitar esa rotacion
+*ok entrada en changelog
+*llamada a watermark_tell_loading desde cualquier dispositivo de carga y maquina (Ace load, microdrive, etc etc)
+*""Rotate colors on load" -> on device activity
