@@ -10,6 +10,7 @@ Added conversion of ZX81 files P to P81, and P81 to P
 Allow to save text note on a ZSF snapshot
 Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
 Improved Mac timing by using native timer
+Improved Watermark Logo: can be shown only when loading, can change colors when loading
 
 Improved Sinclair QL emulation:
 - Allow to increase Sinclair QL RAM size
